--- a/src/components/transactions/Transactions.css
+++ b/src/components/transactions/Transactions.css
@@ -1,16 +1,33 @@
-.transactions ul {
+.transactions .transactions-list {
 	list-style: none;
 	padding: 0;
+	width: 100%;
+	max-width: 720px;
 }
 
-.transactions ul li {
-	border: 1px solid black;
+.transactions .transactions-list .transactions-list-item {
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.14);
 	border-radius: 4px;
-	margin: 8px 0;
+	margin: 16px 0;
+}
+
+.transactions-desc {
 	padding: 8px 16px;
 }
 
-.transactions h1 {
-	color: #865439;
-	margin: 8px 0;
+.transactions-amount {
+	border-radius: 0 4px 4px 0;
+	padding: 16px;
+	width: 50px;
+	text-align: center;
+}
+
+.transactions-debt {
+	background-color: #9b9b6e;
+	color: white;
+}
+
+.transactions-credit {
+	background-color: #ac7c6d;
+	color: white;
 }
