--- a/src/components/transaction-form/TransactionForm.css
+++ b/src/components/transaction-form/TransactionForm.css
@@ -3,6 +3,6 @@
 	max-width: 620px;
 }
 
-.transaction-form form div {
-	margin: 8px 0;
+.transaction-form form .form-container {
+	margin: 16px 0;
 }
