--- a/src/components/transaction-form/TransactionForm.css
+++ b/src/components/transaction-form/TransactionForm.css
@@ -1,3 +1,11 @@
+.transaction-form {
+	flex: 50%;
+}
+
+.transaction-form h1 {
+	color: #ae8468;
+}
+
 .transaction-form form {
 	width: 100%;
 	max-width: 620px;
