--- a/src/components/transaction-form/TransactionForm.css
+++ b/src/components/transaction-form/TransactionForm.css
@@ -1,14 +1,11 @@
 .transaction-form {
-	flex: 50%;
+	flex: calc(50% - 8px);
+	width: 100%;
+	max-width: 620px;
 }
 
 .transaction-form h1 {
 	color: #ae8468;
-}
-
-.transaction-form form {
-	width: 100%;
-	max-width: 620px;
 }
 
 .transaction-form form .form-container {
